--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,14 @@ services:
     container_name: glossaria-build
     environment:
       - NODE_ENV=production
-    command: sh -c "echo '🏗️ Building project inside container...' && echo '📦 Installing dependencies...' && cd web && npm install && cd ../scripts && npm install && echo '🔨 Building web application...' && cd ../web && npm run build && echo '✅ Project built successfully inside container'"
+    command: sh -c "echo '🏗️ Building project inside container...' \
+      && echo '📦 Installing dependencies...' \
+      && cd web && npm install \
+      && cd ../scripts && npm install \
+      && echo '⚙️ Validating CSV and generating JSON...' \
+      && node validate-csv.js && node generate-json.js \
+      && echo '🔨 Building web application...' \
+      && cd ../web && npm run build \
+      && echo '✅ Project built successfully inside container'"
     profiles:
       - build
